src/test/ui/codemap_tests/issue-28308.stderr
error[E0308]: mismatched types
  --> $DIR/issue-28308.rs:12:5
   |
LL |     assert!("foo");
   |     ^^^^^^^^^^^^^^^ expected bool, found reference
   |
   = note: expected type `bool`
              found type `&'static str`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
